# 0D_diffusion

./: .gitignore  README.md  exps.yaml  exps_defaults.yaml  main.py  model.py  pyproject.toml
Processes/Diffusion/: __init__.py  diffusion.py  schedulers.py
dataset/: gaussian_mixture.py
networks/: SimpleDenoiser.py  __init__.py
