[project]
name = "nn-research"
version = "0.1.0"
description = "Research implementation of denoising diffusion probabilistic models (DDPM) and DDIM for Gaussian mixture learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.18.0",
    "fonttools==4.61.1",
    "fsspec==2025.7.0",
    "geomloss>=0.2.6",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.2",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.2",
    "nvidia-cublas-cu12==12.4.5.8 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.2.1.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.5.147 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.6.1.9 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.3.1.170 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.6.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.21.5 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "packaging==25.0",
    "pillow==11.3.0",

    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",

    "six==1.17.0",
    "sympy==1.13.1",
    "timm>=1.0.24",
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "triton==3.2.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.14.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
